# cpet.rag

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: kanban.json
core/: README.md  __init__.py  interfaces.py  log.py
core/citation/: __init__.py  verify.py
core/config/: __init__.py  settings.py
core/metadata/: __init__.py  enrich.py  loader.py
core/models/: __init__.py  chunk.py  paper.py  query.py
core/vectorstore/: __init__.py  lancedb_store.py
data/: README.md  corpus_index.csv
docs/: RAG_IMPLEMENTATION_PLAN.md  RAG_IMPLEMENTATION_PLAN_v1.md  architecture.md  colab_run.md  colab_steps.md  execution-order-cpet-rag.md  implementation-plan-cpet-rag.md  srs-cpet-rag.md
docs/decisions/: 0001-tech-stack.md  README.md
docs/reviews/: deep_research_review_READY.md  deep_research_review_prompt.md  google_deep_research.md
eval/: README.md
eval/qa_set/: loader.py  qa_set.jsonl  schema.md
eval/ragas/: __init__.py  runner.py
frontend/: README.md
infra/: README.md
ingestion/: README.md  __init__.py  build_chunks.py  pipeline.py
ingestion/chunk/: README.md  __init__.py  chunker.py
ingestion/embed/: README.md  __init__.py  jina_embedder.py
ingestion/load/: README.md  __init__.py  loader.py  registry.py
ingestion/obsidian/: __init__.py  note_builder.py  vault_writer.py
notebooks/: README.md  colab_ingest.ipynb
scripts/: README.md  add_paper.py  ingest_all.py
serving/: README.md  __init__.py  pipeline.py
tests/: README.md  test_api.py  test_chunker.py  test_citation.py  test_e2e_poc.py  test_embedder.py  test_eval_ragas.py  test_finalize.py  test_generate.py  test_hybrid.py  test_ingest_all.py  test_load.py  test_obsidian.py  test_parse.py  test_pipeline.py  test_pipeline_query.py  test_rerank.py  test_translate.py  test_vlm_fallback.py
(+19 files in other folders)
