[project]
name = "cpet-rag"
version = "0.1.0"
description = "운동생리·CPET 학술 문헌 RAG 서비스 (AWS 서버형)"
requires-python = ">=3.11"
dependencies = [
  # 오케스트레이션
  "llama-index>=0.12",
  # 파싱
  "docling>=2.0",
  # 벡터스토어
  "lancedb>=0.15",
  # 서빙
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  # AWS / LLM
  "boto3>=1.35",            # Bedrock·S3
  # 평가
  "ragas>=0.2",
  # 유틸
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
gpu = ["torch", "transformers", "sentence-transformers"]   # 임베딩 self-host (Colab/Batch)
dev = ["pytest>=8", "ruff>=0.7", "black>=24"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
